# jotaviz

./: .gitignore  README.md  __init__.py  build_deploy.sh  environment-docs.yml  environment.yml  pyproject.toml  setup.py
examples/: examples.ipynb  plot_examples.py  utils.py
examples/bumpy_plots/: plot_bumpy.py
examples/pizza_plots/: plot_pizza_basic.py  plot_pizza_colorful.py  plot_pizza_comparison.py  plot_pizza_comparison_vary_scales.py  plot_pizza_dark_theme.py  plot_pizza_different_units.py  plot_pizza_scales_vary.py
examples/radar_plots/: plot_radar.py
jotaviz/: .gitignore  __init__.py  age.py  api.py  at_percentile.py  bumpy.py  core.py  cycles.py  decile.py  defaults.py  dotify.py  elfi.py  margin_of_victory.py  mean.py  median.py  mode.py  pearson.py  per_capita.py  percentage.py  percentage_change.py  percentile.py  pizza.py  plotconfig.py  quiver.py  radar.py  range.py  standard_deviation.py  styles.py  summary_stats.py  templates.py  utils.py
jotaviz/assets/colors/: jotaviz-penguin.mplstyle
jotaviz/styles/: jotaviz-dark.mplstyle  jotaviz-glass.mplstyle  jotaviz-gray.mplstyle  jotaviz-white.mplstyle  jotaviz.mplstyle
src/jotaviz/: __init__.py  colors.py  styles.py  templates.py  utils.py
src/jotaviz/assets/colors/: jotaviz.mplstyle
src/jotaviz/styles/: basico.py
src/jotaviz/styles/color/: jotaviz-black.mplstyle
styles/: jotaviz-black.mplstyle  jotaviz-glass.mplstyle  jotaviz-white.mplstyle  jotaviz.mplstyle  jotaviz_plot.py
