[tool.poetry]
name = "jotaviz"
version = "1.1.7"
description = "A Python package for data visualization styles and plots used at https://jota.info"
readme = "README.md"
homepage = "https://github.com/JOTAJornalismo/jotaviz/"
authors = ["Daniel Marcelino <daniel.marcelino@jota.info>"]
license = "MIT"
packages = [{include = "jotaviz"}]
include = ["fonts/*.ttf"]

[tool.poetry.dependencies]
python = ">=3.7"
matplotlib = ">=3.5.1"
pandas = ">=1.3.5"
numpy = ">=1.20.0"
scipy = ">=1.8.0"
pillow = ">=9.1.0"

[tool.poetry.scripts]
realviz = "jotaviz.__main__:main"

[build-system]
requires = ["setuptools", "matplotlib", "pandas", "poetry>=0.20"]
build-backend = "poetry.masonry.api"
