[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["jotaviz/__init__.py"]


[tool.poetry]
authors = ["Daniel Marcelino <daniel.marcelino@jota.info>"]
author_twitter = ["@dmarcelinobr"]
classifiers = [
  "Development Status :: 3 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Visualization",
]

description = "A Python package for data visualization styles and plots used at https://jota.info"
homepage = "https://github.com/JOTAJornalismo/jotaviz/"
license = "MIT"
name = "jotaviz"
packages = [
  {include = "jotaviz"},
]
include = ["fonts/*.ttf"]
readme = "README.md"
version = "1.4.1"

[tool.poetry.dependencies]
importlib-metadata = {version = "^1.0", python = "<3.9"}
python = ">=3.9,<4.0"
pandas = "*"
numpy = "*"
scipy = "*"
matplotlib = "*"
pillow = "*"
seaborn = "*"

[tool.poetry.scripts]
realviz = "jotaviz.__main__:main"

[tool.poetry.dev-dependencies]
black = ">=23.1.0"
flake8 = ">=3.7.7"
isort = ">=5.12.0"
pre-commit = ">=2.7.1"
pytest = ">=4.4"
pytest-cov = "*"

[build-system]
build-backend = "poetry.masonry.api"
requires = [
  "poetry>=1.0",
  "setuptools", # keep it here or "pip install -e" would fail
]
